--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -176,9 +176,13 @@ a:focus {
     position: absolute;
     right: -36px;
     top: 77%;
-    -webkit-transform: translateY(-77%);
-        -ms-transform: translateY(-77%);
-            transform: translateY(-77%);
+    opacity: .5;
+    -webkit-transform: translateY(100%);
+        -ms-transform: translateY(100%);
+            transform: translateY(100%);
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
     background-color: #f6a525;
     color: #fff;
     border-radius: 50%;
@@ -193,6 +197,14 @@ a:focus {
         -ms-flex-pack: center;
             justify-content: center;  
 }
+
+.carousel-inner .carousel-item.active .item_badge {
+    -webkit-transform: translateY(-77%);
+        -ms-transform: translateY(-77%);
+            transform: translateY(-77%);
+    opacity: 1;
+}
+
 
 .item_link {
     font-size: 14px;
